--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -51,18 +51,21 @@
             </div>
         </div>
         <div class="col">
-            <div class="row">
-                <div class="col-4">
-                    <img src="http://placehold.it/64x64" alt="Avatar de joseph">
+            {% set a = ad.author %}
+            <div class="row mb-3 align-items-center">
+                <div class="col-3">
+                <a href="{{path('user_show', {'slug': a.slug})}}" class="">
+                    <img src="{{a.picture}}" class="avatar avatar-medium" alt="Avatar de {{a.fullName}}">
+                </a>
                 </div>
                 <div class="col">
-                    <h3>Joseph Dupont</h3>
-                    <span class="badge badge-primary">3 annonces</span>
+                    <a href="{{path('user_show', {'slug': a.slug})}}" class="">
+                        <h3>{{a.fullName}}</h3>
+                    </a>
+                    <span class="badge badge-primary">{{a.ads | length}} annonces</span>
                 </div>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum labore incidunt dignissimos maiores mollitia pariatur delectus quibusdam expedita optio cumque?</p>
-            <p>Eum ipsam sequi repellat voluptatum ad fugit ea ut porro? Eveniet et sint soluta, ullam eligendi tempore labore unde ea!</p>
-            <p>Quam inventore saepe harum optio officia reprehenderit, nobis repellendus? Voluptatibus, sint cumque? Accusantium sapiente, fuga tenetur sit pariatur dolor voluptates.</p>
+            {{ a.description | raw }}
         </div>
     </div>
 </div>
